# tarnished-api

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENCE  README.md  RESILIENT_CLIENT.md  SECURITY.md  build.rs  demo_mcp.sh  docker-bake.hcl  justfile  test-provenance.json
.devcontainer/: devcontainer.json  setup.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md   copilot.yml  dependabot.yml
.github/actions/time-and-report/: action.yml
.github/scripts/: format-jobs.sh
.github/workflows/: ci.yml  codeql.yml  monitor.yml  verify-image.yml  verify-sbom.yml
docs/: MCP_SUPPORT.md  ci-performance-optimizations.md  kubernetes-deployment.md
examples/: api_client.rs  dev_server.rs  hmac_demo.rs
k8s/: README.md  configmap.yaml  deployment-ci.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  secret.yaml  service.yaml
scripts/: benchmark-build.sh  deploy-local.sh  pre-commit  validate-yaml.py
src/: container_binding_tests.rs  lib.rs  lib_old.rs  main.rs  newrelic.rs
src/config/: hmac.rs  metrics.rs  mod.rs  rate_limit.rs  resilient_client.rs  security.rs
src/handlers/: auth.rs  health.rs  logs.rs  metrics.rs  mod.rs  openapi.rs  version.rs  weather.rs
src/middleware/: mcp.rs  metrics.rs  mod.rs  request_id.rs  security.rs
src/models/: api.rs  audit.rs  auth.rs  logs.rs  mcp.rs  mod.rs
src/services/: ai_summarizer.rs  auth.rs  log_analyzer.rs  metrics.rs  mod.rs  rate_limit.rs  resilient_client.rs  suspicious_activity.rs  weather.rs
src/utils/: hmac.rs  http.rs  mod.rs  route.rs
tests/: auth_audit_tests.rs  integration_tests.rs  mcp_integration_tests.rs  newrelic_tests.rs  resilient_client_tests.rs  weather_tests.rs
