[package]
name = "tarnished-api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
paperclip = { version = "0.9", features = ["actix4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
vergen = { version = "8", features = ["build", "git", "gitcl"] }