[package]
name = "tarnished-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
paperclip = { version = "0.9", features = ["actix4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.11"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
prometheus = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.0"
tokio = { version = "1.47", features = ["full"] }
# HTTP client with resiliency features
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
tower = { version = "0.5", features = ["retry", "timeout", "limit"] }
tower-http = { version = "0.6", features = ["timeout", "trace"] }
tokio-retry = "0.3"
# URL parsing
url = "2.5"
# Error handling
thiserror = "2.0"

[build-dependencies]
vergen = { version = "8", features = ["build", "git", "gitcl"] }